fix: update station icon progress color for light and dark modes (#23)

--- a/src/global/app.scss
+++ b/src/global/app.scss
@@ -15,12 +15,12 @@
 // adapt colors for customization
 $background-color: #faefdc;
 $card-background-color: #f7e6c7;
-$station-icon-progress-color: #305653;
+$station-icon-progress-color: #698e7c;
 $menu-border-color: #f4dcb3;
 
 $background-color-dark: #2a1f0f;
 $card-background-color-dark: #3d2e1a;
-$station-icon-progress-color-dark: #1e3735;
+$station-icon-progress-color-dark: #698e7c;
 $menu-border-color-dark: #4a3820;
 
 // Use Ionic color generator to calculate shade and tint:
